update java note: thread pool & java perf cmd & gc log